--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -205,7 +205,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	    var vs = ""
         jq.each(this.visibleSectors, function(index,sector) { vs += sector + ","; });
 	    this.setBookmark("sectors",vs);
-	    this.setBookmark("indicator",this.current_indicator.gsub(/ /g,'_'));
+	    this.setBookmark("indicator",this.current_indicator.replace(/ /g,'_'));
 	    return false;
 	},
 	// uses the URL hash to set current viewed state
@@ -224,7 +224,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	    }
 	    var indicator = this.getBookmark("indicator");
 	    if(indicator !== undefined && indicator !== null) {
-	        self.setIndicator(indicator.gsub(/_/g,' '));
+	        self.setIndicator(indicator.replace(/_/g,' '));
 	    }
 
 	    return false;	    
