--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -9,8 +9,8 @@
           <li class="share"><a title="share" href="#" id="share_options"><span></span>SHARE</a>
               <ul class="dropmenu_options">
                 <li><a title="embed" href="#" id="embed_map"><span></span>Embed Map</a></li>
-                <li><a href="http://twitter.com/home?status=<%= @page_title.gsub(/\s/,'+') %>+<%= PLATFORM_API_URL + request.env["REQUEST_URI"] %>" target="_new" id="twitter_link">Twitter</a></li>
-                <li><a href="http://facebook.com/worldbank" id="">Facebook</a></li>
+                <li><a href="http://twitter.com/home?status=<%= @page_title.gsub(/\s/,'+') %>+<%= PLATFORM_API_URL + request.env["REQUEST_URI"] %>" target="_new" id="twitter_link" onclick="return twt_click()">Twitter</a></li>
+                <li><a rel="nofollow" href="http://www.facebook.com/share.php?u=<%= PLATFORM_API_URL + request.env["REQUEST_URI"] %>" class="fb_share_button" onclick="return fbs_click()" target="_blank" style="text-decoration:none;">Facebook</a> </li>
                 <!-- <li><a href="#" id="">Embed the Map</a></li> -->
               </ul>
           </li>
