--- a/assets/css/mapping.css
+++ b/assets/css/mapping.css
@@ -611,7 +611,8 @@ a.moreData{
 #project-info th a{
 	color: #000;
 }
-#share_window {z-index: 10000; padding: 10px 10px; background-color: #888; position: absolute; top:20px; left: 80px;}
+#share_window {z-index: 10000; padding: 10px 10px; background-color: #888; position: absolute; top:20px; left: 80px; max-width: 800px;}
+#share_window textarea, #share_window input {font-size: 1.2em; width: 700px; padding: 8px 4px;}
 #close_embed {
 	background: url('img/sprite2.png') no-repeat -285px -705px;
     text-indent: -500em;
