--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -22,6 +22,9 @@ startList = function() {
 }
 window.onload=startList;
 
+function twt_click() {u=location.href;t=document.title;window.open('http://twitter.com/home?status=?u='+encodeURIComponent(u)+'&t='+encodeURIComponent(t),'sharer','toolbar=0,status=0,width=626,height=436');return false;}
+function fbs_click() {u=location.href;t=document.title;window.open('http://www.facebook.com/sharer.php?u='+encodeURIComponent(u)+'&t='+encodeURIComponent(t),'sharer','toolbar=0,status=0,width=626,height=436');return false;}
+
 if(typeof(F1)=='undefined') {F1 = {};}
 (function(){
 	
@@ -173,7 +176,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	},
 	setBookmark: function(key, value) {
         var options = document.location.hash.split("&")
-        document.location.hash = "";
+        var hash = "";
         jq.each(options, function(index,option) {
             if(option !== undefined && option !== null && option != "" && option != "#") {
                 var vals = option.split("=")
@@ -181,11 +184,13 @@ if(typeof(F1)=='undefined') {F1 = {};}
                     vals[1] = value 
                     key = null;
                 }
-                document.location.hash += "&" + vals[0] + "=" + vals[1]; 
+                hash += "&" + vals[0] + "=" + vals[1]; 
             }
         }); 
         if(key !== undefined && key !== null)
-            document.location.hash += "&" + key + "=" + value;
+            hash += "&" + key + "=" + value;
+        
+        document.location.hash = hash;
         return false;
     },
     getBookmark: function(key) {
@@ -217,10 +222,10 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	        self.setLocation("",loc[0],loc[1],loc[2])
 	    }
 	    var vs = this.getBookmark("sectors");
-	    if(vs !== undefined && vs !== null) {
+	    if(vs !== undefined && vs !== null && vs !== "") {
 	        self.toggleSector("none", false, false)
 	        var sectors = vs.split(",");
-	        jq.each(sectors, function(index, sector) { if(self.sectors[sector] !== undefined) self.toggleSector(sector, true, false)})
+	        jq.each(sectors, function(index, sector) { if(sector !== "") self.toggleSector(sector, true, false)})
 	    }
 	    var indicator = this.getBookmark("indicator");
 	    if(indicator !== undefined && indicator !== null) {
@@ -232,20 +237,13 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	updateEmbedLink: function() {
         this.saveState();
         var base_link = document.location.protocol + "//" + document.location.host + document.location.pathname;
+        var view_link = document.location.hash.replace(/&/g,'&');
         var url = base_link + document.location.hash;
-        var iframe = "<iframe src='" + base_link + "/embed?width=800&height=400" + document.location.hash.replace(/&/g,'&') + "' height='400' width='800' scrolling='no' frameborder='0'></iframe>"
+        var iframe = "<iframe src='" + base_link + "/embed?width=800&height=400" + view_link + "' height='400' width='800' scrolling='no' frameborder='0'></iframe><a href='" + url + "'>World Bank's Mapping for Results</a>"
         jq("#embed_code").val(iframe);
         jq("#share_link").attr("value", url);
         return false;
 	},
-	updateTwitterLink: function() {
-        this.saveState();
-        var base_link = wb.country + " - Mapping for Results " + document.location.protocol + "//" + document.location.host + document.location.pathname
-        url = "http://twitter.com/home?status=" + base_link + document.location.hash.replace(/#/g,'%23').replace(/&/g,'%26');
-        jq("#twitter_link").attr("href", url);
-        return false;
-	},
-
 	setLocation: function(region,lat,lon,zoom) {
 	  this.map.swf.setCenterZoom(lat,lon,zoom);
 	  return false;
@@ -277,6 +275,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  self.current_projects = visible;
 	  
 	  if(sector == "none") {
+        self.visibleSectors = [sector];
 		self.map.showLayer(self.stylelayers["Project Locations"].order, visible);
 		if(self.stylelayers["Project Counts"] !== undefined && self.stylelayers["Project Counts"] !== null)
 			self.map.showLayer(self.stylelayers["Project Counts"].order, visible);		  
@@ -308,6 +307,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		jq('#map-content-regions').hide()
 
 	  } else if(sector == 'counts_admin1') {
+          self.visibleSectors = [sector];
 		if(self.stylelayers["Project Counts"] !== undefined) {
 			self.map.showLayer(self.stylelayers["Project Counts"].order, visible);
 			self.map.swf.clearFilters(self.stylelayers["Project Counts"].order);
@@ -322,6 +322,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
         $('input:radio[name="by_region"]').filter('[value="district"]').attr('checked', false);
 
 	  } else if(sector == 'counts_admin2') {
+          self.visibleSectors = [sector];
 		  if(self.stylelayers["Project Counts"] !== undefined){
 			self.map.showLayer(self.stylelayers["Project Counts"].order, visible);
 			self.map.swf.clearFilters(self.stylelayers["Project Counts"].order);
@@ -332,7 +333,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
         jq('#map-content-icons').hide()
 		jq('#map-content-regions').show()
         jq('#layercontrol_projects').html("By Count");
-        
+
         $('input:radio[name="by_region"]').filter('[value="province"]').attr('checked', false);
         $('input:radio[name="by_region"]').filter('[value="district"]').attr('checked', true);
 
@@ -389,6 +390,8 @@ if(typeof(F1)=='undefined') {F1 = {};}
 
 	  if(refreshCharts === undefined || refreshCharts === null || refreshCharts == true)
 		self.sectorPieChart(sector, false);
+		
+      // self.saveState();
 	  return false;
 	},
 	showVisibleSectors: function() {
@@ -415,9 +418,11 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		sector_attribute = major_sector_name;
 		
 	  for(var sector=0;sector<sectorFilters.length; sector++) {
-		expression += "$["+sector_attribute+"] == '" + self.sectors[sectorFilters[sector]].name + "'";
-		if(sector != sectorFilters.length-1)
-		  expression += " OR ";
+	    if(self.sectors[sectorFilters[sector]] !== undefined && self.sectors[sectorFilters[sector]] !== null ) {
+    		expression += "$["+sector_attribute+"] == '" + self.sectors[sectorFilters[sector]].name + "'";
+    		if(sector != sectorFilters.length-1)
+    		  expression += " OR ";
+    	}
 	  };
 	  return expression;
 	},	  
@@ -457,7 +462,8 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  self.current_indicator = indicator;
 	  self.setMapTitle();
 	  // return false;
-	  
+      // self.saveState();
+      return false;
 	},
 	highlightProject: function(project_id) {
 	  var self = this;
@@ -875,6 +881,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
         self.setIndicator(self.country_attrs.indicators[0]);
         // self.toggleSector("counts_admin1",true);
         count = self.country_attrs["projects_count"];
+        self.toggleSector("all",true,false);
 	    self.loadState();
 
         jq('#project_count').html(count);
