--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -831,9 +831,13 @@ if(typeof(F1)=='undefined') {F1 = {};}
             }
             // infowindow
             if(self.stylelayers["Project Locations"] !== undefined) {
+                if(self.country == "Development Marketplace") {
+                     self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$["+major_sector_name+"]", tabs:[{title: "About", type: "text", value:"Project: <a target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[project id]'>$[project title]</a>\nYear Funded: $[approval date]\nFunding Amount:$[total amt]\n\n$[development objective]"}, {title: "Location", type: "text", value: "$[geoname]\n$[country]\n$[region]"}]});
+                } else {
                 self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$["+major_sector_name+"]", tabs:[{title: "About", type: "text", value:"Project ID: <a target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[project id]'>$[project id]</a>\nProject Name: $[project title]\nSector:$["+major_sector_name+"]\n\n$[development objective]"}, {title: "Location", type: "text", value: "Province: $[adm1]\nDistrict: $[adm2]\n\n$[precision description]"},
                 {title:"Results", type: "text", value: "$[results]"}
                 ]});
+                }
             }
             if(self.stylelayers["Project Counts"] !== undefined) {
                 self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Counts"].order, {title: "Activities: $[project count]", subtitle: "$[adm1] $[adm2]", tabs:[{title:"About", type:"text", value: "Counts are determined by the total number of activities working within or at this administrative level."}]});
@@ -846,10 +850,10 @@ if(typeof(F1)=='undefined') {F1 = {};}
     if (ch !== undefined && ch.length == 0)
       y = 10
 	    
-	  this.map.showControl("Zoom",true);
+      this.map.showControl("Zoom",true);
+      this.map.showControl("Legend",true);
+      this.map.swf.setStyle( {legend: { buttonBgColor:0x92948C, buttonPlacement:"horizontal", buttonFontColor:0xFFFFFF, buttonBgAlpha:0.7,offset:{x:0,y:0}}});
     if(!this.embed){
-	      this.map.showControl("Legend",true);
-        this.map.swf.setStyle( {legend: { buttonBgColor:0x92948C, buttonPlacement:"horizontal", buttonFontColor:0xFFFFFF, buttonBgAlpha:0.7,offset:{x:0,y:0}}});
         this.map.swf.setStyle( { zoom: {bgColor: 0x92948C, authHeight: false, height:100, cornerRadius: 5, offset: {x:15,y:50}}})
 	  } else {
         this.map.swf.setStyle( { zoom: {bgColor: 0x92948C, authHeight: false, height:10, cornerRadius: 5, expanded: false, horizontal: true, offset: {x:15,y:y}}}) }
