--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -12,7 +12,10 @@
 <% end %>
       <div id="map-content-icons">
         <div id="map-content-icons2">
-          <ul>                  
+          <ul>
+          <% if (params[:controls] || false).to_s == "true" %>
+          <li style="margin-right: 11px;">Sector:</li>
+          <% end %>
             <li class="s1"><a  sector-name="public" original-title="Public Administration, Law, and Justice" class="sectorcontrol inactive" id="sectorcontrol_public" href="#">1</a></li>
             <li class="s2"><a  sector-name="agriculture" original-title="Agriculture, fishing, and forestry" class="sectorcontrol inactive" id="sectorcontrol_agriculture" href="#">2</a></li>
             <li class="s3"><a  sector-name="health" original-title="Health and other social services" class="sectorcontrol inactive" id="sectorcontrol_health" href="#">3</a></li>
@@ -26,7 +29,9 @@
             <li class="s11"><form action="" method="get">
                 <input name="input" id="sall" class="" type="checkbox" value=""/>
               </form></li>
+              <% if (params[:controls] || false).to_s != "true" %>
             <li class="all">ALL</li>
+            <% end %>
           </ul>
         </div>
       </div>
