Some more sector padding

--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -14,7 +14,7 @@
         <div id="map-content-icons2">
           <ul>
           <% if (params[:controls] || false).to_s == "true" %>
-          <li style="margin-right: 11px;">Sector:</li>
+          <li style="margin-left: 11px; margin-right: 11px;">Sector:</li>
           <% end %>
             <li class="s1"><a  sector-name="public" original-title="Public Administration, Law, and Justice" class="sectorcontrol inactive" id="sectorcontrol_public" href="#">1</a></li>
             <li class="s2"><a  sector-name="agriculture" original-title="Agriculture, fishing, and forestry" class="sectorcontrol inactive" id="sectorcontrol_agriculture" href="#">2</a></li>
@@ -26,10 +26,10 @@
             <li class="s8"><a  sector-name="transportation" original-title="Transportation" class="sectorcontrol inactive" id="sectorcontrol_transportation" href="#">8</a></li>
             <li class="s9"><a  sector-name="water" original-title="Water, sanitation and flood protection" class="sectorcontrol inactive" id="sectorcontrol_water" href="#">9</a></li>
             <li class="s10"><a sector-name="education" original-title="Education" class="sectorcontrol inactive" id="sectorcontrol_education" href="#">10</a> </li>            
+              <% if (params[:controls] || false).to_s != "true" %>
             <li class="s11"><form action="" method="get">
                 <input name="input" id="sall" class="" type="checkbox" value=""/>
               </form></li>
-              <% if (params[:controls] || false).to_s != "true" %>
             <li class="all">ALL</li>
             <% end %>
           </ul>
