--- a/m4r/views/about.erb
+++ b/m4r/views/about.erb
@@ -1,7 +1,7 @@
 <div class="static_display">
   <h4><%= @page_subtitle = @page.name %></h4>
   <ul style="float:right">
-    <% Page.all(:page_type => "page", :order => [:name.asc]).each do |about_page| %>
+    <% Page.all(:page_type => "page", :parent_id => 1, :order => [:name.asc]).each do |about_page| %>
     <li><a href="<%= about_page.url == 'about' ? '' : '/about' %><%= about_page.url %>"><%= about_page.name %></a></li>
     <% end %>
   </ul>
