--- a/m4r/views/javascript.erb
+++ b/m4r/views/javascript.erb
@@ -30,4 +30,4 @@
 <script src="<%= PLATFORM_API_URL %>/javascripts/f1.maker.visual_creator.js?1279556727" type="text/javascript"></script>
 <% end %>
 
-<script src="/map.js" type="text/javascript"></script>
+<script src="/script/map.js" type="text/javascript"></script>
